# SmartFlow

./: .gitignore  .gitmodules  README.md  pyproject.toml
archive/src/smartflow/: train.py.two_stages
examples/: config.yaml
examples/channel/: .env_00000.txt  .env_00001.txt  .env_00002.txt  .env_00003.txt  .env_00004.txt  .env_00005.txt  .env_00006.txt  .env_00007.txt  cales  compare_params.py  compare_params.txt  configuration.py  custom_env.py.unused  err  eval.sh  hist.py  input.nml  job.out.old  job.sh  job_mini1.sh  job_run_db.sh  job_slurm.sh  job_tmp6.sh  job_tmp8.sh  main.py  mini.f90  mini_key1  mini_mpi.f90  out  out_16  out_80  out_81  params.py.old  run.py  split_forcing.py  tmp3.py  tmp6.py  tmp7.py  train.py  train.sh  (+1 more)
examples/channel/archive/: mini  mini_key2  tmp.py  tmp2.py
examples/channel/cases/train_01/: stats.txt
examples/channel/dump_data/action/: action_env0_eps0.txt  (+25 more)
examples/channel/eval_0/: stats.txt
examples/channel/eval_01/: input.nml
examples/channel/experiment/: smartsim_params.txt
examples/channel/mini-experiment/: smartsim_params.txt
examples/channel/tmp/: tmp3.py  tmp5.py  tmp7.py  tmp8.py
examples/channel/train_0/: input.nml  input.py
examples/channel/train_00/: input.py  stats.txt
examples/channel/train_01/: input.py
examples/channel/wandb/: latest-run
examples/cyl_rl_debug/: job_mn5.sh  params.py  run.py
examples/eval_retau_05200/: .env_000.txt  config.yaml  eval.sh
examples/eval_retau_10000/: .env_001.txt  config.yaml  models
examples/flow_cases/retau_01000/: input.nml  input.py  stats-single-point-chan-01000.out  stats.txt
examples/flow_cases/retau_01E05/: input.nml  input.py  stats.txt
examples/flow_cases/retau_01E06/: input.nml  input.py  stats.txt
examples/flow_cases/retau_01E07/: input.nml  input.py  stats-single-point-chan-01E07.out  stats.txt
examples/flow_cases/retau_01E08/: input.nml  input.py  stats.txt
examples/flow_cases/retau_01E09/: input.nml  input.py  stats.txt
examples/flow_cases/retau_01E10/: input.nml  input.py  stats-single-point-chan-01E10.out  stats.txt
examples/flow_cases/retau_05200/: input.nml  input.py  stats-single-point-chan-05200.out  stats.txt
examples/flow_cases/retau_10000/: input.nml  input.py  stats.txt
examples/laptop_single_task_cpu/: train.sh
examples/laptop_single_task_gpu/: train.sh
examples/local_server_single_task_cpu/: train.sh
examples/local_server_single_task_gpu/: train.sh
examples/multi_nodes_single_task_cpu/: train.sh
examples/multi_nodes_single_task_gpu/: train.sh
examples/single_node_multi_task_gpu/: .env_00000.txt  .env_00001.txt  .env_00002.txt  .env_00003.txt  train.sh
examples/single_node_single_task_cpu/: .env_00000.txt  .env_00001.txt  .env_00002.txt  .env_00003.txt  train.sh
examples/single_node_single_task_gpu/: .env_00000.txt  .env_00001.txt  .env_00002.txt  .env_00003.txt  train.sh
examples/train_retau_05200/: config.yaml  train.sh
examples/v1.1.0/: config.yaml
examples/v1.1.0/eval/: eval.sh
examples/v1.1.0/flow_cases_cpg_medium_cfl_0.5/: copy.sh
examples/v1.1.0/train_cpg_medium_mul_4_vel_log_cfl_0.5/: train.sh
src/smartflow/: cfd_env.py  cfd_env.py.unused  channel_env.py  configuration.py  custom_env.py  eval.py  init_smartsim.py  launch_configuration.py  main.py  runtime.py  train.py
src/smartsod2d/: init_smartsim.py  sod_env.py
utils/: action_vs_step.py  forcing.py  loglaw.py  retau_relative_error.py  state_action.py  state_action_jpdf.py  sync_wandb.sh  tmp.py  train_slurm.sh
utils/archive/: compare_velocity.py  tmp4.py  tmp8.py  tmp9.py
(+1843 files in other folders)
