[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartflow"
version = "1.2.0"
requires-python = ">=3.10, <3.12"
dependencies = [
  "smartsim",
  "smartredis",
  "stable-baselines3",
  "numpy",
  "omegaconf",
  "wandb",
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/soaringxmc/SmartFlow"
Issues = "https://github.com/soaringxmc/SmartFlow/issues"
Documentation = "https://smartflow.readthedocs.io/en/latest/"
